# MycoCosm_genome_downloader

./: .gitignore  READMETEST.md  Readme.md  mycocosm_genome_downloader.py  pyproject.toml
src/mycocosm_downloader/: auth.py  cli.py  constants.py  download.py  models.py  prepare.py  utils.py
tests/: test_auth.py
